--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GOOGLE_OAUTH_CLIENT_ID=""
 GOOGLE_OAUTH_CLIENT_SECRET=""
-GOOGLE_OAUTH_REDIRECT_URI=http://localhost:3000/auth/callback
+GOOGLE_OAUTH_REDIRECT_URI=https://my-app-jvl5a.ondigitalocean.app/auth/callback
 JWT_SECRET_KEY=MY_VERY_ULTRA_TOP_SECRET
 RAZORPAY_KEY_ID=""
 RAZORPAY_SECRET_ID=""
@@ -11,4 +11,4 @@ PG_DATABASE=speakerore.db
 AWS_S3_BUCKET_NAME=""
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
-REACT_APP_URL=https://speaker-backend.herokuapp.com/API
+REACT_APP_URL=speakerore-server-l9clh.ondigitalocean.app/API
