--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GOOGLE_OAUTH_CLIENT_ID=""
 GOOGLE_OAUTH_CLIENT_SECRET=""
-GOOGLE_OAUTH_REDIRECT_URI=https://my-app-jvl5a.ondigitalocean.app/auth/callback
+GOOGLE_OAUTH_REDIRECT_URI=https://server.speakerore.com/auth/callback
 JWT_SECRET_KEY=MY_VERY_ULTRA_TOP_SECRET
 RAZORPAY_KEY_ID=""
 RAZORPAY_SECRET_ID=""
